do not modify the list because of side effects during the loop